# agentlens

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  docker-compose.yml  mcp.json  pyproject.toml
.github/workflows/: ci.yml  publish.yml
agentlens/: __init__.py  cli.py  evals.py  export.py  mcp_server.py  pricing.py  trace.py  tracer.py  viewer.py
agentlens/adapters/: __init__.py  langgraph.py  openai_agents.py  strands.py
agentlens/providers/: __init__.py  groq.py
agentlens/server/: __init__.py  app.py  db.py  schemas.py  security.py
agentlens/server/ui/: index.html
docs/: BLOG.md  LAUNCH.md  LINKEDIN_POST.md  SOCIAL.md  landing.html
examples/: chain_explained.py  compare_designs.py  export_to_agentcore.py  groq_agent.py  inspect_trace.py  otlp_bridge.py  server_smoke.py  shopping_assistant.py  strands_agent.py  support_agent.py  test_mcp_tools.py  user_guide.py
tests/: test_agentlens.py  test_export.py  test_groq_and_judge.py  test_langgraph_adapter.py  test_openai_agents_adapter.py  test_otlp_bridge.py  test_server.py  test_strands_adapter.py
