[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentlens"
version = "0.2.0"
description = "Production observability + evals control plane for AI agents — REST API, web dashboard, traces, evals, OpenTelemetry export."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "AgentLens contributors" }]
keywords = [
    "ai", "agents", "observability", "evals", "tracing", "llm",
    "opentelemetry", "otel", "aws", "bedrock", "agentcore",
    "strands", "langgraph", "openai-agents", "groq",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
viewer = ["fastapi", "uvicorn"]
server = ["fastapi>=0.110", "uvicorn[standard]>=0.29", "sqlalchemy>=2.0", "pydantic>=2"]
langgraph = ["langchain-core"]
openai-agents = ["openai-agents"]
otlp = ["opentelemetry-sdk", "opentelemetry-exporter-otlp-proto-grpc"]
postgres = ["psycopg2-binary"]
mcp = ["mcp>=1.0"]
dev = ["pytest", "fastapi", "uvicorn", "sqlalchemy", "httpx", "build", "twine"]

[project.urls]
Homepage = "https://github.com/EeswaraReddy/agentlens"
Repository = "https://github.com/EeswaraReddy/agentlens"
Issues = "https://github.com/EeswaraReddy/agentlens/issues"
Changelog = "https://github.com/EeswaraReddy/agentlens/blob/main/CHANGELOG.md"

[project.scripts]
agentlens = "agentlens.cli:main"
agentlens-mcp = "agentlens.mcp_server:main"

[tool.setuptools.packages.find]
include = ["agentlens*"]
exclude = ["tests*", "examples*", "docs*", "runs*"]

[tool.setuptools.package-data]
"agentlens.server" = ["ui/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
